refactor: spotless 기반 lint 적용 (#98) - 의존성 및 들여쓰기